src/objects/IPM_BET_Search_Fields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Field_Label__c</fullName>
        <label>Field Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Date</label>
        <type>Checkbox</type>
    </fields>
    <label>IPM BET Search Fields</label>
</CustomObject>